--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: Andrés
 middle_name:
 last_name: Riveros Valdevenito
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  To reach me, you can email me at ar4151 (at) columbia (dot) edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
