--- a/_config.yml
+++ b/_config.yml
@@ -191,7 +191,14 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
-  - dropdown.md
+  - _pages/dropdown.md
+  - _pages/blog.md
+  - _pages/books.md
+  - _pages/cv.md
+  - _pages/news.md
+  - _pages/profiles.md
+  - _pages/projects.md
+  - _pages/repositories.md
 keep_files:
   - CNAME
   - .nojekyll
