--- a/_config.yml
+++ b/_config.yml
@@ -199,6 +199,7 @@ exclude:
   - _pages/profiles.md
   - _pages/projects.md
   - _pages/repositories.md
+  - _posts/
 keep_files:
   - CNAME
   - .nojekyll
